--- a/style.css
+++ b/style.css
@@ -25,6 +25,14 @@ a img{
     margin-right: 20px;
 
 }
+/* . sections icone utilisateur */
+.utilisateur{ 
+ 
+}
+
+/* . fin icone utilisateur */
+
+
 /* . sections fix */
 
 .fix{
