--- a/article/liste_article.css
+++ b/article/liste_article.css
@@ -13,8 +13,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    justify-content: space-around;
     padding-top: 30px;
-    
+    margin-top: 10px;
+    margin-left: 20px;
 }
 .logo img{
     width: 120px;
@@ -77,6 +79,8 @@ body{
     background-color: rgb(240, 239, 239);
     border-radius: 7px;
     margin-left: 10px;
+   padding-left: 10px; 
+   padding-right: 10px;
     
 }
 .imgImage{
@@ -100,14 +104,14 @@ body{
 .info_article h5{
     font-size: 12px;
     font-weight: 300;
-    margin-bottom: 17px;
+    margin-bottom: 0px;
 }
 .buton_modif{
     margin-top: 0px;
     display: flex;
 }
 .buton_modif a {
-    margin-top: 10px;
+    margin-top: 7px;
     padding: 5px 10px;
     background-color: #F7A429;
     border: none;
@@ -119,4 +123,9 @@ body{
 }
 .buton_modif .suprime{
     background-color: red;
+}
+.fond{
+    width: 140px;
+    height: 60px; 
+    background-color: #ffffff;
 }
